Use only Path for read and write of PD1 file